# research_agent

./: .env.example  .gitignore  404.html  CLAUDE.md  LICENSE  README.md  docker-compose.yml  index.html  mcp_servers.example.json  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
agents-and-tasks/: index.html
architecture/: index.html
commands/: index.html
consortium/: index.html
deploy/: Caddyfile  README.md  research-agent-web.service
deployment/: index.html
docker/: experiment.Dockerfile
docs/: agents-and-tasks.md  architecture.md  commands.md  consortium.md  deployment.md  experiment-runner.md  experiments.md  getting-started.md  index.md  memory.md
docs/reference/: agents.md  config.md  consortium.md  experiments.md  index.md  memory.md  writing.md
experiment-runner/: index.html
experiments/: index.html
getting-started/: index.html
memory/: index.html
reference/: index.html
reference/agents/: index.html
reference/config/: index.html
reference/consortium/: index.html
reference/experiments/: index.html
reference/memory/: index.html
reference/writing/: index.html
scripts/: diagnose_panel_models.py  dryrun_consortium.py  smoke_consortium_graph.py
search/: search_index.json
src/research_agent/: __init__.py  cli.py  config.py  db.py  llm.py  main.py  mcp_client.py  observability.py  prompts.py
src/research_agent/agent/: __init__.py  graph.py  state.py
src/research_agent/agents/: __init__.py  code_reader.py  consortium_tool.py  dispatcher.py  literature.py  methodology_validator.py  middleware.py  paper_verifier.py  pipeline.py  registry.py  review_loop.py  subagent.py  task_store.py
src/research_agent/consortium/: __init__.py  consortium.py  graph.py  state.py
src/research_agent/discord_bot/: __init__.py  bot.py
src/research_agent/evals/: __init__.py  harness.py  judge.py
src/research_agent/experiments/: __init__.py  backend.py  coder.py  image.py  mlflow.py  runner.py  ssh_docker.py  tools.py  types.py  workspace.py
src/research_agent/memory/: __init__.py  episodic.py  lesson_stats.py  lessons.py  maintenance.py  manager.py  procedural.py  semantic.py  summarize.py  tokens.py
src/research_agent/projects/: __init__.py  store.py
src/research_agent/tools/: __init__.py
src/research_agent/training/: README.md  __init__.py  export.py  train_lora.py
src/research_agent/web/: __init__.py  app.py  auth.py  main.py
src/research_agent/web/frontend/: README.md  package-lock.json  package.json  vite.config.js
src/research_agent/web/frontend/src/: App.jsx  api.js  styles.css
src/research_agent/web/frontend/src/pages/: ProjectDetail.jsx  Projects.jsx  Tasks.jsx  Traces.jsx
src/research_agent/writing/: __init__.py  latex.py  lit_review.py  methodology.py  paper.py  tools.py
tests/: test_agents.py  test_chunking.py  test_config.py  test_consortium.py  test_dispatcher.py  test_evals.py  test_experiment_auto_retry.py  test_experiment_runner_v2.py  test_experiments.py  test_issue_fixes.py  test_lit_review.py  test_mcp_config.py  test_memory_lessons.py  test_pipeline_piping.py  test_projects.py  test_review_loop.py  test_summarize.py  test_tokens.py  test_training.py  test_web.py  test_writing.py
