[project]
name = "research-agent"
version = "0.1.0"
description = "A personal, autonomous research agent: explores literature, designs and writes methodology, generates and runs experiment code, reports findings, and drafts papers. Talks over Discord."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=1,<2",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2",
    "langchain-mcp-adapters>=0.1.0",
    "discord.py>=2.4",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
memory = [
    "mem0ai>=0.1.40",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.1",
    "openai>=1.0",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
research-agent = "research_agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
