[project]
name = "research-agent"
version = "0.1.0"
description = "A personal, autonomous research agent: explores literature, designs and writes methodology, generates and runs experiment code, reports findings, and drafts papers. Talks over Discord."
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=1,<2",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2",
    "langchain-mcp-adapters>=0.1.0",
    "discord.py>=2.4",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pypdf>=4,<6",  # extract text from uploaded PDF attachments (pure-Python, BSD)
]

[project.optional-dependencies]
memory = [
    "mem0ai>=0.1.40",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.1",
    "openai>=1.0",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10",
]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "workos>=5",
    "itsdangerous>=2.2",
    "psycopg[binary,pool]>=3.1",
    "httpx>=0.27",
]
obs = [
    # Client-side tracing only; the Phoenix server/UI runs as a Docker container
    # (see docker-compose.yml), so the heavy `arize-phoenix` package isn't needed.
    "arize-phoenix-otel>=0.5",
    "openinference-instrumentation-langchain>=0.1.29",
]
train = [
    # For the reference LoRA-per-role fine-tune (training/train_lora.py). Heavy
    # GPU deps, only needed on the box where you actually train.
    "torch>=2.2",
    "transformers>=4.44",
    "datasets>=2.20",
    "peft>=0.12",
    "trl>=0.9",
    "accelerate>=0.33",
]

[project.scripts]
research-agent = "research_agent.main:main"
research-agent-web = "research_agent.web.main:main"
research-agent-export = "research_agent.training.export:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
